# bilibili-mall

./: .gitignore  .pre-commit-config.yaml  API.md  DEPLOY.md  README.md  main.py  preview.py  processing.ipynb  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: crawl-bmall-data.yml
.streamlit/: config.toml
bilibili_mall/: __init__.py  app_config.py  crawler.py  crawler_options.py  crawler_panel.py  crawler_runtime.py  interactive_crawler.py  utils.py
scripts/: crawl_bmall_data.py
tests/: test_app_config.py  test_crawl_bmall_data.py  test_crawler_config.py
